lua/examples/lua-test-suite/IntelliJ-Luanalysis/src/test/resources/inspections/strict_nil.lua.fail
---@type number|nil
local aNumberOrNil

---@type number
local aNumber

aNumberOrNil = nil
aNumber =  <error descr="Type mismatch. Required: 'number' Found: 'nil'">nil</error>
